# CPP_SDL2_BASE

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: main.cpp
